--- a/.travis.yml
+++ b/.travis.yml
@@ -36,13 +36,14 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then source venv/bin/activate; fi
 install:
   - pip install -U pip
+  - pip install codecov
   - pip install -r requirements.txt
   - pip install wheel
   - python build_packages.py all
   - pip install dist/*.whl
 script: 
   - python -m unittest discover
-#after_success:
-#  - bash <(curl -s https://codecov.io/bash)
+after_success:
+  - codecov
 notifications:
   webhooks: https://outlook.office.com/webhook/a4aad5a1-3f32-42c8-8a5e-903446565be3@72f988bf-86f1-41af-91ab-2d7cd011db47/TravisCI/a018a63e5e994165a2a56b0dd4c62120/3d491bab-ac74-4d43-aeeb-f4b674cb5466
