--- a/.travis.yml
+++ b/.travis.yml
@@ -40,9 +40,15 @@ install:
   - pip install coverage
   - pip install -r requirements.txt
   - pip install wheel
-  - python build_packages.py all
-  - pip install dist/*.whl
+  - pip install -e azure-storage-nspkg
+  - pip install -e azure-storage-common
+  - pip install -e azure-storage-blob
+  - pip install -e azure-storage-table
+  - pip install -e azure-storage-file
+  - pip install -e azure-storage-queue
 script: 
-  - python run -m unittest discover
+  - coverage run -m unittest discover
+after_success:
+  - codecov
 notifications:
   webhooks: https://outlook.office.com/webhook/a4aad5a1-3f32-42c8-8a5e-903446565be3@72f988bf-86f1-41af-91ab-2d7cd011db47/TravisCI/a018a63e5e994165a2a56b0dd4c62120/3d491bab-ac74-4d43-aeeb-f4b674cb5466
